--- a/es-ES.plg_system_registration_validation.sys.ini
+++ b/es-ES.plg_system_registration_validation.sys.ini
@@ -6,10 +6,10 @@
 ;Chuda
 ;;
 COM_USERS_REGISTER_CEDULA_LABEL="Cédula:"
-COM_USERS_DESIRED_CEDULA="Debe Ingresar Un numero de Cédula"
+COM_USERS_DESIRED_CEDULA="Debe ingresar un número de Cédula"
 COM_USERS_REGISTER_APELLIDO_LABEL="Apellido:"
 COM_USERS_REGISTER_APELLIDO_DESC="Introduzca su apellido"
-COM_USERS_REGISTER_PHONE_DESC="Debe Ingresar un Número de Teléfono fijo / Movíl"
-COM_USERS_REGISTER_PHONE_LABEL="Número de Teléfono fijo / Movíl:"
-COM_USERS_REGISTER_FECNAC_DESC="Debe Ingresar la Fecha de Nacimiento"
-COM_USERS_REGISTER_FECNAC_LABEL="Fecha de Nacimiento:"
+COM_USERS_REGISTER_PHONE_DESC="Debe ingresar un número de teléfono fijo / móvíl"
+COM_USERS_REGISTER_PHONE_LABEL="Número de teléfono fijo / móvíl:"
+COM_USERS_REGISTER_FECNAC_DESC="Debe ingresar la fecha de nacimiento"
+COM_USERS_REGISTER_FECNAC_LABEL="Fecha de nacimiento:"
